--- a/dev/html/home/test.pug
+++ b/dev/html/home/test.pug
@@ -60,6 +60,8 @@ block contents
                                     p.txt.size01 13 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의
                                     p.txt.size02 14 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의
 
+                                    p.txt.size01.mont 폰트 2022.10.06 ~ 2022.10.07
+
                                     dl.txt-list
                                         dt.term 제공
                                         dd.desc 오프라인
@@ -86,6 +88,7 @@ block contents
 
                                     p.txt.size02 14px 문화포털
                                     p.txt.size01 13px 2022.10.06 ~ 2022.10.07
+                                    p.txt.size01.mont 13px 폰트 2022.10.06 ~ 2022.10.07
                     
 
 
