--- a/dev/css/prototype.scss
+++ b/dev/css/prototype.scss
@@ -15,6 +15,11 @@
     padding: 0 20px;
 }
 
+
+[class^="ico-"] {
+    display: inline-block;
+}
+
 //텍스트 말줄임
 .ellipsis {
 // width: 각 요소에 적용
@@ -113,7 +118,7 @@ display: -webkit-box;
 .ico-play {
     position:absolute;
     top:50%; left:50%;
-    transform: translate(-50% -50%);
+    transform: translate(-50%, -50%);
     width: 72px;
     height: 72px;
     background: url('../images/icons/ico_play_btn.png') no-repeat 0 0;
@@ -265,6 +270,41 @@ display: -webkit-box;
         right: 10px;
     }
 
+
+    // 할인 아이콘
+    .thumb-discount {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 60px;
+        height: 60px;
+        background: #fff;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: Montserrat;
+        font-size: 14px;
+
+        .num {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        &.color01 {
+            color: #d83d17;
+            border: 1px solid #d83d17;
+        }
+        &.color02 {
+            color: #41bcdc;
+            border: 1px solid #41bcdc;
+        }
+        &.color03 {
+            color: #2ac888;
+            border: 1px solid #2ac888;
+        }
+    }
+
     // 예매하기 버튼
     .btn-link {
         position: absolute;
@@ -343,6 +383,7 @@ display: -webkit-box;
         line-height: 1.5;
         color: #222;
         margin-bottom: 16px;
+        letter-spacing: -0.3px;
 
         &.size01 {
             font-size: 16px;
@@ -357,6 +398,7 @@ display: -webkit-box;
     .txt {
         color: #999;
         line-height: 1.42;
+        letter-spacing: -0.3px;
 
         &.size01 {
             font-size: 13px;
@@ -368,6 +410,11 @@ display: -webkit-box;
         & + .txt {
             margin-top: 16px;
         }
+
+        &.mont {
+            font-family: Montserrat;
+            letter-spacing: -0.3px;
+        }
     }
 
     .txt-list {
@@ -375,7 +422,7 @@ display: -webkit-box;
         color: #999;
         font-size: 13px;
         line-height: 1.5;
-        margin-top: 6px;
+        margin-top: 4px;
         letter-spacing: -0.3px;
 
         .term {
@@ -449,6 +496,18 @@ display: -webkit-box;
     }
 }
 
+// 컨텐츠 회색선
+.line-gray {
+    &::after {
+        content:'';
+        display: block;
+        width:100%;
+        height: 15px;
+        margin-top: 80px;
+        background-color: #f5f5f5;
+    }
+}
+
 
 @media (max-width:1024px){
     .breadcrumb {
@@ -462,4 +521,31 @@ display: -webkit-box;
         font-size: 14px;
         margin-top: 16px;
     }
+
+    // 컨텐츠 회색선
+    .line-gray {
+        &::after {
+            margin-top: 40px;
+        }
+    }
+
+    .ico-play {
+        width: 48px;
+        height: 48px;
+    }
+
+    // 할인 아이콘
+    .box-thumb {
+        .thumb-discount {
+            width: 48px;
+            height: 48px;
+        
+            font-size: 12px;
+    
+            .num {
+                font-size: 18px;
+            }
+        }
+    }
+    
 }
