--- a/dev/_src/_pug/_extend_html5.pug
+++ b/dev/_src/_pug/_extend_html5.pug
@@ -52,7 +52,9 @@ html(class=`${htmlClass}`, lang=`${language}`)
                 link(href=`${pathSettingHtml}css_partials/componentlist.css`, type='text/css', rel='stylesheet')
                 link(href=`${pathSettingHtml}css_partials/header.css`, type='text/css', rel='stylesheet')
                 link(href=`${pathSettingHtml}css_partials/footer.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css/prototype.css`, type='text/css', rel='stylesheet')
+                link(href=`${pathSettingHtml}css_partials/prototype.css`, type='text/css', rel='stylesheet')
+                link(href=`${pathSettingHtml}css_partials/ksc.css`, type='text/css', rel='stylesheet')
+                link(href=`${pathSettingHtml}css_partials/kya.css`, type='text/css', rel='stylesheet')
             //- build
             else
                 link(href=`${pathSettingHtml}css/common.css`, type='text/css', rel='stylesheet')
