--- a/dev/html/home/index.pug
+++ b/dev/html/home/index.pug
@@ -1,7 +1,7 @@
 extends /_src/_pug/_extend_html5
 
 block append css
-    link(href=`${pathSettingHtml}css/oneEye.css`, type='text/css', rel='stylesheet')
+    //- link(href=`${pathSettingHtml}css/oneEye.css`, type='text/css', rel='stylesheet')
 
 block contents
     #container.pageClassSub
