--- a/dev/html/home/test.pug
+++ b/dev/html/home/test.pug
@@ -74,7 +74,7 @@ block contents
 
                             a(href="#none").box-thumb
                                 .thumb-img
-                                    img(src="../../images/thumb_img.jpg", alt="")
+                                    img(src="../../images/thumb_img.png", alt="")
                                     i.ico-play(aria-hidden="true")
                                 ul.thumb-tag
                                     li.tag
