--- a/dev/css_partials/ksc.scss
+++ b/dev/css_partials/ksc.scss
@@ -1,16 +1,16 @@
 @charset "utf-8";
 
 //문화TV
-.visual-top {
-    &::after {
-        content:'';
-        display: block;
-        width:100%;
-        height: 15px;
-        margin-top: 80px;
-        background-color: #f5f5f5;
-    }
-}
+// .visual-top {
+//     &::after {
+//         content:'';
+//         display: block;
+//         width:100%;
+//         height: 15px;
+//         margin-top: 80px;
+//         background-color: #f5f5f5;
+//     }
+// }
 
 .visual-area {
     display:flex;
